<resources>
    <string name="app_name">Tindog</string>
    <string name="matchesTitle">Matches</string>
    <string name="registrationTitle">Registration</string>
    <string name="authTitle">Authorization</string>
    <string name="profileEditingTitle">Edit Profile</string>
    <string name="emailHint">email</string>
    <string name="passwordHint">password</string>
    <string name="loginBtnText">Log in</string>
    <string name="registrationBtnName">Are you new?</string>
    <string name="nameHint">Your name</string>
    <string name="registrateBtnText">Registrate</string>
    <string name="myProfileName">My Profile</string>
    <string name="testName">testName</string>
    <string name="testBreed">testBreed</string>
    <string name="noMatches">No matches yet :(</string>
    <string name="saveBtn">Save changes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="citata">look around, your love may be in the next kennel</string>
    <string name="edit_gallery">Edit gallery</string>
    <string name="change_photo">Change profile photo</string>
    <string name="breedHint">Breed</string>
    <string name="ageHint">Age</string>
    <string name="countryHint">Country</string>
    <string name="cityHint">City</string>
    <string name="addressHint">Address</string>
    <string name="phoneHint">Phone number</string>
    <string name="done_editing">Save</string>
    <string name="matches">matches</string>
    <string name="dogs">dogs</string>
    <string name="profile">profile</string>
    <string name="swipe">SWIPE</string>
    <string name="left_to_dislike">left to dislike</string>
    <string name="right_to_like">right to like</string>
    <string name="back_to_authorization">Back to authorization</string>
    <string name="bulldogSampleData">bulldog</string>
    <string name="ageSampleData">7 y.o.</string>
    <string name="citySampleData">Moscow</string>
    <string name="phoneSampleData">8–(915)–019–6019</string>
    <string name="newMatch">NEW</string>
    <string name="cancel">Cancel</string>
    <string name="bobik">Bobik</string>
    <string name="sign_out">Sign out</string>
    <string name="addressSampleData">Lenina, 33</string>
    <string name="background">background</string>
    <string name="photo">photo</string>
    <string name="name_age_n_city">Name, Age \n city</string>
    <string name="nameSampleData">Bobik</string>
</resources>
