<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorizationAndRegistration.RegistrationActivity">

    <ImageView
        android:id="@+id/background"
        style="@style/backgroundStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            app:titleTextAppearance="@style/appBarText"
            app:title="@string/registrationTitle"
            style="@style/topAppBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:theme="@style/editsStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordField">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailFieldInp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFields"
            android:hint="@string/emailHint" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:theme="@style/editsStyle"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/colorPrimaryDark"
        app:hintTextColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"  >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordFieldInp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFields"
            android:hint="@string/passwordHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        style="@style/button"
        android:layout_marginTop="24dp"
        android:text="@string/registrateBtnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"  />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToAuthBtn"
        style="@style/borderlessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_authorization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>


