<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".otherDogProf.OtherDogActivity">

    <ImageView
        android:id="@+id/background"
        style="@style/backgroundStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".Account.AccountActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                app:navigationIcon="@drawable/cancel"
                app:titleTextAppearance="@style/appBarText"
                app:title="likes you too"
                style="@style/topAppBar" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/imageMain"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/additionalInfo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dog"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/nameSampleData"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/additionalInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageMain">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:id="@+id/layout_age">
                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/ageSampleData"
                    style="@style/pageText"
                    android:drawableStart="@drawable/ic_event_black_24dp"
                    android:drawablePadding="12dp"
                    android:layout_marginStart="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:id="@+id/layout_breed">
                <TextView
                    android:id="@+id/breed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/bulldogSampleData"
                    style="@style/pageText"
                    android:drawableStart="@drawable/dog_label"
                    android:drawablePadding="12dp"
                    android:layout_marginStart="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:id="@+id/layout_city">
                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/citySampleData"
                    style="@style/pageText"
                    android:drawableStart="@drawable/ic_location_city_primary_24dp"
                    android:drawablePadding="12dp"
                    android:layout_marginStart="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:id="@+id/layout_address">
                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/addressSampleData"
                    style="@style/pageText"
                    android:drawableStart="@drawable/ic_home_black_24dp"
                    android:drawablePadding="12dp"
                    android:layout_marginStart="12dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:id="@+id/layout_phone">
                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phoneSampleData"
                    style="@style/pageText"
                    android:drawableStart="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="12dp"
                    android:layout_marginStart="12dp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>