<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".matches.MatchesActivity">
    
    <ImageView
        android:id="@+id/background"
        style="@style/backgroundStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            app:titleTextAppearance="@style/appBarText"
            app:title="@string/matchesTitle"
            style="@style/topAppBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/matchesRecycler"
        android:layout_marginTop="56dp"
        android:paddingBottom="60dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@id/menuLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/noMatches"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="@font/roboto_thin"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/noMatches"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:itemIconTint="@color/nav_icons_color"
            app:itemTextColor="@color/nav_icons_color"
            android:layout_gravity="bottom"
            app:menu="@menu/menu"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>